[project]
name = "image-utility"
version = "0.1.0"
description = ""
authors = [
    {name = "thiagola92", email = "thiagola92@gmail.com"},
]
dependencies = [
    "Pillow>=10.3.0",
    "pytesseract>=0.3.10",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/la-catalog/image-utility"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
unittest = "python -m unittest discover -v -f -s tests"
ruff = "python -m ruff format"

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.3.5",
]

[[tool.pdm.source]]
url = "https://la-catalog.github.io/pypi/simple/"
name = "la-catalog"

[[tool.pdm.source]]
url = "https://pypi.org/simple"
name = "pypi"

[tool.pdm.resolution]
respect-source-order = true
